--- a/Express/hello_express/package.json
+++ b/Express/hello_express/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "ejs": "^2.5.7",
-    "express": "^4.16.2"
+    "express": "^4.16.2",
+    "socket.io": "^2.0.4"
   }
 }
