--- a/Express/groupChat/package.json
+++ b/Express/groupChat/package.json
@@ -18,6 +18,7 @@
     "body-parser": "^1.18.2",
     "ejs": "^2.5.7",
     "express": "^4.16.2",
+    "express-session": "^1.15.6",
     "socket.io": "^2.0.4"
   }
 }
